Drop FrameLoader::AllAncestorsAreComplete

There's no spec requirement to navigate with replacement enabled if
an ancestor browsing context isn't completely loaded. That's all it's
used for.

Bug: 676050
Change-Id: Id1811c4fb6ee82cd0f724a7c94073995d7157887
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1591797
Reviewed-by: Charlie Reis <creis@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Nate Chapin <japhet@chromium.org>
Cr-Commit-Position: refs/heads/master@{#656076}

Former-commit-id: 1e4f9b413ce5baada38df298b4e8d3fa2df7e3e9