third_party/blink/renderer/core/frame/local_frame.cc
@@ -325,26 +325,6 @@ bool LocalFrame::IsLocalRoot() const {
   return Tree().Parent()->IsRemoteFrame();
 }
 
-static bool MustReplaceCurrentItem(LocalFrame* frame) {
-  // Non-user navigation before the page has finished firing onload should not
-  // create a new back/forward item. See https://webkit.org/b/42861 for the
-  // original motivation for this.
-  if (!frame->GetDocument()->LoadEventFinished() &&
-      !LocalFrame::HasTransientUserActivation(frame)) {
-    return true;
-  }
-
-  // Navigation of a subframe during loading of an ancestor frame does not
-  // create a new back/forward item. The definition of "during load" is any time
-  // before all handlers for the load event have been run. See
-  // https://bugs.webkit.org/show_bug.cgi?id=14957 for the original motivation
-  // for this.
-  Frame* parent_frame = frame->Tree().Parent();
-  auto* parent_local_frame = DynamicTo<LocalFrame>(parent_frame);
-  return parent_local_frame &&
-         !parent_local_frame->Loader().AllAncestorsAreComplete();
-}
-
 void LocalFrame::Navigate(const FrameLoadRequest& request,
                           WebFrameLoadType frame_load_type) {
   if (!navigation_rate_limiter().CanProceed())
@@ -352,8 +332,13 @@ void LocalFrame::Navigate(const FrameLoadRequest& request,
   if (request.ClientRedirect() == ClientRedirectPolicy::kClientRedirect) {
     probe::FrameScheduledNavigation(this, request.GetResourceRequest().Url(),
                                     0.0, request.ClientRedirectReason());
-    if (MustReplaceCurrentItem(this))
+    // Non-user navigation before the page has finished firing onload should not
+    // create a new back/forward item. The spec only explicitly mentions this in
+    // the context of navigating an iframe.
+    if (!GetDocument()->LoadEventFinished() &&
+        !HasTransientUserActivation(this)) {
       frame_load_type = WebFrameLoadType::kReplaceCurrentItem;
+    }
   }
   loader_.StartNavigation(request, frame_load_type);
 
